fix inputtext width overload on mobile device

--- a/HAPPYLONELY-FRONTEND/src/main/frontend/src/app/login/login.component.css
+++ b/HAPPYLONELY-FRONTEND/src/main/frontend/src/app/login/login.component.css
@@ -47,6 +47,10 @@
     margin-bottom: 1rem;
 }
 
+.p-inputtext {
+    width: 100%;
+}
+
 .register-link {
     text-align: center;
 }
